# ecg_evaluation

./: .gitignore  .pdm-python  .pdm.toml  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
AdditionalStudy/: README.md
src/attractor_gen/: attractor_generator.py
src/metrics/: compute.py  evaluate.py  main.py
src/metrics/methods/: __init__.py  ecg_assess_2022.py  fiducial_metrics.py  hurst_exponent.py  more_index_2011.py  non_fiducial_metrics.py  tsd_metrics.py
src/models/: custom_model.py  optimise_hp.py  train_model.py
src/models/components/: backward_model_selection.py  custom_logit.py  custom_loss.py  features_selection.py  model_parameters.py
src/notebooks/: Attractor_shuffling.ipynb  Best_model_selection.ipynb  Calculate_metrics.ipynb  Dataset_manager.ipynb  First_trial_test_TSD.ipynb  Pathology_TSD.ipynb  SNR_ECG_TSD.ipynb  Statistic_lead.ipynb  Testing_model_index.ipynb  aggregate_results.ipynb  compute_metrics.ipynb  test.ipynb  test_new.ipynb  train_tree.ipynb
src/operations/: __exec_compute_metrics.py  __exec_evaluate_index.py  __exec_train_models.py  dataset_manager.py
src/shared_utils/: Logistic_reg_model.py  colorednoise.py  gen_sde.py  utils_data.py  utils_evaluation.py  utils_parallel.py  utils_path.py  utils_tsd_study.py  utils_type.py  utils_visualisation.py
